# oscalkit

./: INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
demos/01-basic/: SCENARIO.md  catalog.json  component-definition.json  profile.yaml
demos/02-nist80053-low-gap/: SCENARIO.md  catalog.json  low-baseline.json  saas-component.json
demos/03-ci-coverage-gate/: SCENARIO.md  moderate-baseline.yaml  ssp.json
demos/04-sarif-code-scanning/: SCENARIO.md  broken-catalog.json
demos/05-json-yaml-roundtrip/: SCENARIO.md  component.json
demos/06-merge-baselines/: SCENARIO.md  low.json  moderate.yaml
demos/07-portfolio-stats/: SCENARIO.md  portfolio-catalog.json
demos/08-full-coverage-pass/: SCENARIO.md  baseline.yaml  edge-agent.json
demos/09-feeds-enrichment/: SCENARIO.md
docs/: USAGE.md
examples/: help.txt  version.txt
oscalkit/: __init__.py  __main__.py  cli.py  connect.py  core.py  feeds.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_features.py  test_feeds.py  test_sarif_and_demos.py  test_smoke.py
tests/fixtures/feeds-cache/: oscal-800-53-rev5-catalog.data  oscal-800-53-rev5-catalog.meta.json
