[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-oscalkit"
version = "0.1.1"
description = "OSCAL compliance-as-code validator, converter & control-coverage diff"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "oscal", "compliance", "fedramp", "devsecops", "cli", "self-hosted", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/oscalkit"

[project.scripts]
"oscalkit-emit" = "oscalkit.connect:emit_main"
oscalkit = "oscalkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["oscalkit"]
